--- a/xsd2code/xsd2code.csproj
+++ b/xsd2code/xsd2code.csproj
@@ -169,6 +169,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="v2\Core\AttributeGenerator.cs" />
     <Compile Include="v2\Core\ClassGenerator.cs" />
+    <Compile Include="v2\Core\Models\XmlAttribute.cs" />
+    <Compile Include="v2\Core\Models\Class.cs" />
+    <Compile Include="v2\Core\Models\Property.cs" />
     <Compile Include="v2\Core\PrimitiveType.cs" />
     <Compile Include="v2\Core\PropertyGenerator.cs" />
     <Compile Include="v2\ProcessorOptions.cs" />
@@ -193,6 +196,5 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
